--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>json</artifactId>
             <version>20240303</version>
         </dependency>
+        
+        <!-- JavaMail API -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
     
     <build>
